# sonic-frontiers-devtools

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Mod.ini.in  README.md  debug-tools.sln  devtools.sln  mod_version.ini.in
.github/workflows/: build.yml
debug-tools/: .gitignore  Context.cpp  Context.h  Desktop.cpp  Desktop.h  Icons.cpp  Mod.cpp  Mod.ini  ToolBar.cpp  UIInventory.cpp  UIInventory.h  debug-tools.vcxproj  debug-tools.vcxproj.filters  icons.h  packages.config
debug-tools/common/: ReflectionEditor.cpp  ReflectionEditor.h
debug-tools/operation-modes/: OperationMode.cpp
debug-tools/operation-modes/ObjectInspection/: ObjectInspection.cpp  ObjectInspection.h  ObjectInspector.cpp  ObjectInspector.h  ObjectList.cpp  ObjectList.h
debug-tools/resource-editors/: ResReflectionEditor.cpp  ResReflectionEditor.h
debug-tools/serialization/: ReflectionSerializer.cpp  ReflectionSerializer.h
debug-tools/utilities/: LuaInterface.h
devtools/: .gitignore  Context.cpp  Context.h  Desktop.cpp  Desktop.h  DllMain.cpp  EulerTransform.cpp  GOCVisualDebugDrawRenderer.cpp  GOCVisualDebugDrawRenderer.h  GameServiceInspector.cpp  GameServiceInspector.h  Helpers.h  Icons.cpp  Library.cpp  Library.h  MathUtils.cpp  MathUtils.h  MemoryInspector.cpp  MemoryInspector.h  Mod.cpp  Mod.ini  NeedleFxSceneDataTester.cpp  NeedleFxSceneDataTester.h  ObjectDataUtils.cpp  ObjectDataUtils.h  Pch.h  ResReflectionEditorWindow.cpp  ResReflectionEditorWindow.h  ResourceBrowser.cpp  ResourceBrowser.h  SettingsManager.cpp  SettingsManager.h  StandaloneWindow.cpp  StandaloneWindow.h  Textures.cpp  Textures.h  Theme.cpp  Theme.h  ToolBar.cpp  ToolBar.h  (+6 more)
devtools/common/: ObjectDataEditor.cpp  ObjectDataEditor.h  ReflectionEditor.cpp  ReflectionEditor.h  ReflectiveOperations.cpp  ReflectiveOperations.h  SimpleWidgets.cpp  SimpleWidgets.h  Textures.cpp  Textures.h  Theme.cpp  Translations.cpp  Translations.h  icons.h
devtools/core-services/: CameraManagerInspector.cpp  CameraManagerInspector.h  GameUpdaterInspector.cpp  GameUpdaterInspector.h  GraphicsContextInspector.cpp  GraphicsContextInspector.h
devtools/operation-modes/: OperationMode.h
devtools/operation-modes/LevelEditor/: LevelEditor.cpp  LevelEditor.h  ObjectDataInspector.cpp  ObjectDataInspector.h  ObjectLibrary.cpp  SetObjectList.cpp  SetObjectList.h
devtools/operation-modes/ObjectInspection/: ObjectInspection.cpp  ObjectInspection.h  ObjectInspector.cpp  ObjectInspector.h  ObjectList.cpp  ObjectList.h
devtools/resource-editors/: ResEffectEditor.cpp  ResEffectEditor.h  ResObjectWorldEditor.cpp  ResObjectWorldEditor.h  ResReflectionEditor.cpp  ResReflectionEditor.h
devtools/serialization/: EndianSwaps.h  ReflectionSerializer.cpp  ReflectionSerializer.h
devtools/serialization/resource-rfls/: ResObjectWorld.cpp
devtools/utilities/: EulerTransform.cpp  LuaInterface.cpp
natvis/: CMakeLists.txt
resources/vendor-licenses/: FileWatch.txt  HedgeLib.txt
src/: CMakeLists.txt  DllMain.cpp  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  ImGuiFileDialogFileSystemOverride.h  Mod.cpp  Pch.h  devtools.rc
src/api/: API.cpp  API.h  APIContext.h  Common.h  DebugCamera.cpp  DebugCamera.h  GameManager.cpp  GameManager.h  ObjectWorld.cpp  ObjectWorld.h  RenderManager.cpp  RenderManager.h
src/debug-rendering/: DebugRenderable.cpp  DebugRenderable.h  DebugRenderer.cpp  DebugRenderer.h  DebugRenderingSystem.cpp  DebugRenderingSystem.h  GOCVisualDebugDrawRenderer.cpp  GOCVisualDebugDrawRenderer.h
src/debug-rendering/renderables/: Colliders.cpp  Colliders.h  GOCVisualDebugDraws.cpp  GOCVisualDebugDraws.h  Light.cpp  Light.h  OcclusionCapsules.cpp  OcclusionCapsules.h  Paths.cpp  Paths.h  PhysicalAnimation.cpp  PhysicalAnimation.h
src/debug-rendering/visuals/: AabbTree.cpp  AabbTree.h  FxColCollisionShape.cpp  FxColCollisionShape.h  FxColCollisionShapeData.cpp  FxColCollisionShapeData.h  Geometry.cpp  Geometry.h  KdTree.cpp  KdTree.h  Math.cpp  Math.h  SvColShape.cpp  SvColShape.h
src/feature-config/: miller.h  rangers.h  wars.h
src/hot-reload/: ReloadManager.cpp  ReloadManager.h
src/io/: stream.h
src/modules/: API.cpp  API.h  Module.h  PhotoMode.cpp  PhotoMode.h
src/reflection/: Concepts.h  HSONTemplateGeneration.cpp  HSONTemplateGeneration.h  ReflectiveOperations.cpp  ReflectiveOperations.h  RflArrayAccessor.h  RflClassGen.h  RflClassGenFwd.h  RflDiff.cpp  RflDiff.h  RflMoveArrayAccessor.cpp  RflMoveArrayAccessor.h  RflRanges.h
src/reflection/serialization/: HSONTemplateGeneration.cpp  HSONTemplateGeneration.h  ReflectionSerializer.cpp  ReflectionSerializer.h
src/resources/: ManagedMemoryRegistry.cpp  ManagedMemoryRegistry.h  ReloadManager.cpp  ReloadManager.h
src/resources/managed-memory/: ManagedCArray.h
src/ui/: Action.cpp  Action.h  Component.cpp  Component.h  Context.cpp  Context.h  Desktop.cpp  Desktop.h  FileSystemBrowser.cpp  FileSystemBrowser.h  GlobalSettings.cpp  GlobalSettings.h  Input.cpp  Input.h  SettingsManager.cpp  SettingsManager.h  Shortcuts.cpp  Shortcuts.h  ToolBar.cpp  ToolBar.h  Viewport.cpp  Viewport.h
src/ui/common/: FileDialog.h  NodeEditor.h  NodeEditorAutoLayout.cpp  NodeEditorAutoLayout.h  ObjectDataEditor.cpp  ReflectionEditor.cpp  ReflectionEditor.h  SimpleWidgets.cpp  SimpleWidgets.h  StandaloneOperationModeHost.cpp  StandaloneOperationModeHost.h  StandaloneWindow.cpp  StandaloneWindow.h  Textures.cpp  Textures.h  Theme.cpp  Theme.h  Translations.cpp  Translations.h  TreeView.h  icons.cpp  icons.h  stb_image.cpp
src/ui/core-services/: CameraManagerInspector.cpp  CameraManagerInspector.h  GameModeInspector.cpp  GameModeInspector.h  GameUpdaterInspector.cpp  GameUpdaterInspector.h  (+8 more)
src/utilities/: BoundingBoxes.cpp  BoundingBoxes.h  ColliderFilter.h  CompatibleObject.cpp  CompatibleObject.h  GameObjectUtils.cpp  GameObjectUtils.h  NameHash.h  ObjectDataUtils.cpp  ObjectDataUtils.h  ResourceTypes.cpp  ResourceTypes.h  RflClassGen.h  RflClassGenFwd.h  RflDiff.cpp  SurfRideBugFix.cpp  SurfRideBugFix.h
vendor-licenses/: ImGuiFileDialog.txt
(+507 files in other folders)
